<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.example.layoutproject.ComboListDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_standard_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_details_card_layout" />


                <TextView
                    android:id="@+id/txtPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/item_details_choose_period_label"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvItems" />

                <RadioGroup
                    android:id="@+id/radGroupPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <RadioButton
                        android:id="@+id/radOneMonthPeriod"
                        style="@style/AppRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:background="@drawable/radio_button_background"
                        android:checked="true"
                        android:text="@string/one_month_period" />
                </RadioGroup>


                <TextView
                    android:id="@+id/txtReceiveTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/item_details_choose_receive_time_label"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvItems" />

                <RadioGroup
                    android:id="@+id/radGroupReceiveTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <RadioButton
                        style="@style/AppRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/radio_button_background"
                        android:checked="true"
                        tools:text="1 lần" />

                    <RadioButton
                        style="@style/AppRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/radio_button_background"
                        tools:text="2 lần" />

                    <RadioButton
                        style="@style/AppRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/radio_button_background"
                        tools:text="3 lần" />
                </RadioGroup>


            </LinearLayout>

        </ScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="@dimen/_10sdp"
            app:cardMaxElevation="@dimen/_12sdp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorWhite">

                <TextView
                    android:id="@+id/txtTotalPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/total_price_label"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtTotalPriceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textColor="@color/text_red"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtTotalPriceLabel"
                    tools:text="1.000.000 VND" />

                <TextView
                    android:id="@+id/txtPlaceOrder"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="0dp"
                    android:background="@drawable/background_retangle_primary"
                    android:gravity="center"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/place_order_label"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>